--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,5 +22,12 @@
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+}
+
+hero-font {
+  font-family: Avantgarde, sans-serif;
+}
+
+text-accent {
+  line-height: 96px;
 }
