--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -85,6 +85,30 @@ text-accent {
   /* z-index: -1; /* Place it behind other content */
 }
 
+.standard-page-ellipse-blue {
+  width: 600px;
+  height: 400px;
+  border-radius: 50%;
+  background-color: var(--blue-ellipse);
+  filter: blur(180px);
+}
+
+.standard-page-ellipse-purple {
+  width: 500px;
+  height: 300px;
+  border-radius: 50%;
+  background-color: var(--purple-ellipse);
+  filter: blur(180px);
+}
+
+.standard-page-ellipse-green {
+  width: 400px;
+  height: 300px;
+  border-radius: 50%;
+  background-color: var(--green-ellipse);
+  filter: blur(180px);
+}
+
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
@@ -156,6 +180,9 @@ text-accent {
   --sidebar-accent-foreground: oklch(0.205 0 0);
   --sidebar-border: oklch(0.922 0 0);
   --sidebar-ring: oklch(0.708 0 0);
+  --blue-ellipse: rgba(18, 198, 234, 0.5);
+  --green-ellipse: rgba(26, 229, 215, 0.5);
+  --purple-ellipse: rgba(105, 33, 230, 0.491);
 }
 
 .dark {
